# MiruCoin

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  make
include/: CMakeLists.txt
src/: block.h  blockchain.h  ledger.h  main.cpp  merkletree.hpp  miner.h  mirucoin.h  tx.h  utils.cpp  utils.h
